--- a/sample.html
+++ b/sample.html
@@ -21,8 +21,9 @@
         </div>
         <img src="images/god.png" alt="Seetha Rama" class="center-image">
         <div class="text">
-            <h1>Wedding Invitation Of Katrenikona</h1> 
-            <h2>Rama Usha Sree & Krishna Maitreya</h2>
+            <h1>Wedding Invite You To The Wedding Of</h1> 
+	    <h1> Katrenikona's Eldest Daughter </h1>
+            <h2>Rama Usha Sree weds Krishna Maitreya</h2>
             <h3>Join us for a beautiful ceremony</h3>
         </div>
         <a href="images/invitation.jpg" target="_blank" class="button">View Invitation</a>
