--- a/sample.html
+++ b/sample.html
@@ -21,7 +21,7 @@
         </div>
         <img src="images/god.png" alt="Seetha Rama" class="center-image">
         <div class="text">
-            <h1>Wedding Invite You To The Wedding Of</h1> 
+            <h1>We Invite You To The Wedding Of</h1> 
 	    <h1> Katrenikona's Eldest Daughter </h1>
             <h2>Rama Usha Sree weds Krishna Maitreya</h2>
             <h3>Join us for a beautiful ceremony</h3>
